syntax = "proto3";

package example;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


option go_package="./examplepb";

message DeleteRequest {
  string id = 1;
}

message Event {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Duration timeout = 3;
  google.protobuf.StringValue description = 4; // nullable string
}

service EventService {
  rpc DeleteEvent(DeleteRequest) returns (google.protobuf.Empty);
}